--- a/styles.css
+++ b/styles.css
@@ -5,15 +5,6 @@
     gap: 30px; /* Adds space between grid containers */
 }
   
-/* Main layout container */
-.main-container {
-    margin-top: 50px;;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    width: 100%;
-}
-
 .grid-header {
     font-size: 15px;
     color: yellow;
@@ -29,20 +20,10 @@
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
     text-align: center;
 }
-
+/* 
 .grid-item {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: bold;
-    font-size: 16px;
-    color: white;
-    border-radius: 8px;
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
-    position: relative;
-    cursor: pointer;
-    padding: 5px;
-}
+
+} */
 
 .quantity {
     font-size: 14px;
