--- a/styles/upgrades.css
+++ b/styles/upgrades.css
@@ -11,9 +11,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    cursor: pointer;
+    cursor: grab;
     font-size: 24px;
     box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    z-index: 2;
 }
 
 .menu {
@@ -88,6 +89,6 @@
 @media (max-width: 768px) {
     .submenu {
         max-width: 100%; /* Make the submenu full width on smaller screens */
-        width: 60%; /* Limit width on smaller screens */
+        width: 85%; /* Limit width on smaller screens */
     }
 }
